--- a/css/css.css
+++ b/css/css.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Madimi+One&display=swap');
+
 .platos {
     display: flex;
     align-items: center;
@@ -58,8 +60,36 @@
     font-size: 18px;
     color: #939393;
 }
-.detalle {
+.isFavorito {
     font-size: 22px;
     font-weight: 700;
     padding-left: 20px;
+}
+
+section.formulario .btn {
+    background: #2ca7ef;
+    border: none;
+    color: white;
+    padding: 9px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    border-bottom: solid 2px #1f88c5;
+}
+section.formulario input, section.formulario select {
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+}
+section.formulario h4 {
+    margin: 0px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 12px;
+    margin-bottom: 10px;
+}
+section.formulario {
+    margin-bottom: 30px;
+    padding: 10px;
+    background: #f3ba99;
+    border-radius: 5px;
 }
